# py-cli-maker

./: LICENSE  README.md
py-cli-maker/: Makefile  README.md  pyproject.toml
py-cli-maker/py_cli_maker/: __init__.py  cli.py
py-cli-maker/py_cli_maker/commands/: __init__.py  domaine_command.py  domaine_ddd_command.py  model_command.py  package_command.py  url_command.py
py-cli-maker/py_cli_maker/generators/: __init__.py  ddd_domaine_generator.py  domaine_generator.py  model_generator.py  package_generator.py
py-cli-maker/pyfastcli/commands/: __init__.py  domaine_command.py  domaine_ddd_command.py  model_command.py  package_command.py  url_command.py
py-cli-maker/pyfastcli/generators/: __init__.py  ddd_domaine_generator.py  domaine_generator.py  model_generator.py  ninja_routes.py
py-cli-maker/tests/: __init__.py  test_cli.py  test_ddd_domaine_generator.py  test_domaine_generator.py  test_model_generator.py  test_ninja_routes.py  test_package_generator.py
