[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-cli-maker"
version = "0.1.0"
description = "CLI pour générer des fichiers Python et routes Django Ninja"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hedi", email = "hedi@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.0.0",
    "ninja",
]
keywords = ["cli", "code-generator", "django", "ninja", "scaffolding"]

# Les dépendances de développement sont définies dans [dependency-groups] pour uv
# Cette section est conservée pour compatibilité avec pip standard
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipdb>=0.13.0",
]

[project.scripts]
# Nom de la commande CLI une fois installée
py-cli = "py_cli_maker.cli:cli"

[project.urls]
Homepage = "https://github.com/hedi/py-cli-maker"
Repository = "https://github.com/hedi/py-cli-maker"
Issues = "https://github.com/hedi/py-cli-maker/issues"

[tool.setuptools]
packages = ["py_cli_maker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=py_cli_maker --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "black>=24.8.0",
    "ipdb>=0.13.13",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.8",
]
